asm_tests/other_testfiles/invalid_files/error30.s
.name "MORO"
.comment "MORJESTA!" moro

sti r1, r2, r3
